--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+                        		<filters>
+                            			<filter>
+                                			<artifact>*:*</artifact>
+                                			<excludes>
+                                    				<exclude>META-INF/*.SF</exclude>
+                                   				<exclude>META-INF/*.DSA</exclude>
+                                    				<exclude>META-INF/*.RSA</exclude>                                       
+                                			</excludes>
+                            			</filter>
+                        		</filters>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
