Updated maven URLs

--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,23 @@
 	</licenses>
 
 	<scm>
-    		<connection>scm:git:git@github.com:Steveice10/mc-protocol-lib.git</connection>
+    	<connection>scm:git:git@github.com:Steveice10/mc-protocol-lib.git</connection>
 		<developerConnection>scm:git:git@github.com:Steveice10/mc-protocol-lib.git</developerConnection>
 		<url>git@github.com:Steveice10/mc-protocol-lib/</url>
 	</scm>
 
-       <distributionManagement>        
-                <repository>            
-                        <id>dropbox</id>                        
-                        <url>file:///home/steven/Dropbox/Public/maven</url>                      
-                </repository>           
-        </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>Spacebase Artifactory</id>
+			<name>Spacebase Artifactory-releases</name>
+			<url>http://repo.spacebase.ch/artifactory/main</url>
+		</repository>
+		<snapshotRepository>
+			<id>Spacebase Artifactory</id>
+			<name>Spacebase Artifactory-snapshots</name>
+			<url>http://repo.spacebase.ch/artifactory/main</url>
+		</snapshotRepository>
+	</distributionManagement>
 
   	<developers>
     		<developer>
