--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
+			 <configuration>
+			  <showDeprecation>true</showDeprecation>
+			 </configuration>
 			</plugin>
 			<!-- JAR creation plugin -->
 			<plugin>
