--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.spacebase</groupId>
 	<artifactId>mcprotocollib</artifactId>
-	<version>14w06b-SNAPSHOT</version>
+	<version>14w08a-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>MCProtocolLib</name>
