--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ch.spacehq</groupId>
+	<groupId>org.spacehq</groupId>
 	<artifactId>mcprotocollib</artifactId>
 	<version>1.7.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -64,13 +64,13 @@
 	<!-- Dependencies -->
 	<dependencies>
 		<dependency>
-			<groupId>ch.spacehq</groupId>
+			<groupId>org.spacehq</groupId>
 			<artifactId>opennbt</artifactId>
 			<version>1.3</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>ch.spacehq</groupId>
+			<groupId>org.spacehq</groupId>
 			<artifactId>packetlib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
