--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,22 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.spacehq</groupId>
     <artifactId>packetlib</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>PacketLib</name>
     <description>A library for networking between a client and a server with packets.</description>
     <url>http://github.com/Steveice10/PacketLib/</url>
+
+    <scm>
+        <connection>scm:git:git@github.com:Steveice10/PacketLib.git</connection>
+        <developerConnection>scm:git:git@github.com:Steveice10/PacketLib.git</developerConnection>
+        <url>git@github.com:Steveice10/PacketLib/</url>
+    </scm>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <licenses>
         <license>
@@ -19,25 +29,6 @@
         </license>
     </licenses>
 
-    <scm>
-        <connection>scm:git:git@github.com:Steveice10/PacketLib.git</connection>
-        <developerConnection>scm:git:git@github.com:Steveice10/PacketLib.git</developerConnection>
-        <url>git@github.com:Steveice10/PacketLib/</url>
-    </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>spacehq</id>
-            <name>spacehq-releases</name>
-            <url>http://repo.spacehq.org/content/repositories/release/</url>
-        </repository>
-        <snapshotRepository>
-            <id>spacehq</id>
-            <name>spacehq-snapshots</name>
-            <url>http://repo.spacehq.org/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <developers>
         <developer>
             <id>steveice10</id>
@@ -46,14 +37,23 @@
         </developer>
     </developers>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <distributionManagement>
+        <repository>
+            <id>spacehq</id>
+            <name>spacehq-releases</name>
+            <url>http://repo.spacehq.org/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>spacehq</id>
+            <name>spacehq-snapshots</name>
+            <url>http://repo.spacehq.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <repositories>
         <repository>
             <id>spacehq-releases</id>
-            <url>http://repo.spacehq.org/content/repositories/release/</url>
+            <url>http://repo.spacehq.org/content/repositories/releases/</url>
         </repository>
         <repository>
             <id>spacehq-snapshots</id>
@@ -76,23 +76,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            <!-- JAR creation plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.6</version>
             </plugin>
-            <!-- JAR dependency addition plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.5</version>
+                <version>2.4.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -102,6 +100,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                     <filters>
                         <filter>
                             <artifact>*:*</artifact>
