Added junit tests

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>mcauthlib</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
