--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.steveice10</groupId>
     <artifactId>mcprotocollib</artifactId>
-    <version>1.15.2-1-SNAPSHOT</version>
+    <version>1.15.2-1</version>
     <packaging>jar</packaging>
 
     <name>MCProtocolLib</name>
@@ -62,13 +62,13 @@
         <dependency>
             <groupId>com.github.steveice10</groupId>
             <artifactId>packetlib</artifactId>
-            <version>d8bfc98d05</version>
+            <version>1.6</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.github.steveice10</groupId>
             <artifactId>mcauthlib</artifactId>
-            <version>1058d78fd5</version>
+            <version>1.3</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
