--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.steveice10</groupId>
     <artifactId>mcprotocollib</artifactId>
-    <version>1.16.4-1</version>
+    <version>1.16.4-2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>MCProtocolLib</name>
@@ -70,6 +70,11 @@
             <artifactId>mcauthlib</artifactId>
             <version>1.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-serializer-gson</artifactId>
+            <version>4.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
