Add netty-codec-haproxy dependency

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>4.1.56.Final</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-haproxy</artifactId>
+            <version>4.1.56.Final</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
