--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+      <dependency>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-annotations</artifactId>
+        <version>4.2.0</version>
+      </dependency>
     </dependencies>
 
     <build>
