--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>com.github.steveice10</groupId>
             <artifactId>packetlib</artifactId>
-            <version>1.8</version>
+            <version>ac5600734e</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
