--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>com.github.steveice10</groupId>
             <artifactId>mcauthlib</artifactId>
-            <version>1.4</version>
+            <version>6f3d6aada5</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
