build: refactor for repository owner transfer

--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.steveice10</groupId>
+    <groupId>com.github.GeyserMC</groupId>
     <artifactId>mcprotocollib</artifactId>
     <version>1.17.1-2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>MCProtocolLib</name>
     <description>A library for communicating with a Minecraft client or server.</description>
-    <url>http://github.com/Steveice10/MCProtocolLib/</url>
+    <url>http://github.com/GeyserMC/MCProtocolLib/</url>
 
     <scm>
-        <connection>scm:git:git@github.com:Steveice10/MCProtocolLib.git</connection>
-        <developerConnection>scm:git:git@github.com:Steveice10/MCProtocolLib.git</developerConnection>
-        <url>git@github.com:Steveice10/MCProtocolLib/</url>
+        <connection>scm:git:git@github.com:GeyserMC/MCProtocolLib.git</connection>
+        <developerConnection>scm:git:git@github.com:GeyserMC/MCProtocolLib.git</developerConnection>
+        <url>git@github.com:GeyserMC/MCProtocolLib/</url>
     </scm>
 
     <properties>
@@ -35,15 +35,15 @@
 
     <developers>
         <developer>
-            <id>steveice10</id>
-            <name>Steveice10</name>
-            <email>Steveice10@gmail.com</email>
+            <id>GeyserMC</id>
+            <name>GeyserMC</name>
+            <url>https://geysermc.org/</url>
         </developer>
     </developers>
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/Steveice10/MCProtocolLib/issues</url>
+        <url>https://github.com/GeyserMC/MCProtocolLib/issues</url>
     </issueManagement>
 
     <repositories>
@@ -55,19 +55,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.steveice10</groupId>
+            <groupId>com.github.GeyserMC</groupId>
             <artifactId>opennbt</artifactId>
             <version>1.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.steveice10</groupId>
+            <groupId>com.github.GeyserMC</groupId>
             <artifactId>packetlib</artifactId>
             <version>2.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.steveice10</groupId>
+            <groupId>com.github.GeyserMC</groupId>
             <artifactId>mcauthlib</artifactId>
             <version>6f3d6aada5</version>
             <scope>compile</scope>
