--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.GeyserMC</groupId>
+    <groupId>org.geysermc</groupId>
     <artifactId>mcprotocollib</artifactId>
     <version>1.17.1-2-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -55,19 +55,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.GeyserMC</groupId>
+            <groupId>org.geysermc</groupId>
             <artifactId>opennbt</artifactId>
             <version>1.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.GeyserMC</groupId>
+            <groupId>org.geysermc</groupId>
             <artifactId>packetlib</artifactId>
             <version>2.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.GeyserMC</groupId>
+            <groupId>org.geysermc</groupId>
             <artifactId>mcauthlib</artifactId>
             <version>6f3d6aada5</version>
             <scope>compile</scope>
