build: refactor for repository owner transfer

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <developers>
         <developer>
-            <id>GeyserMC</id>
+            <id>geysermc</id>
             <name>GeyserMC</name>
             <url>https://geysermc.org/</url>
         </developer>
