--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,18 @@
             <version>0.0.8.Final</version>
             <classifier>linux-x86_64</classifier>
         </dependency>
-      <dependency>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-annotations</artifactId>
-        <version>4.3.0</version>
-      </dependency>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>4.3.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nukkitx.fastutil</groupId>
+            <artifactId>fastutil-int-object-maps</artifactId>
+            <version>8.5.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
