--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,18 @@ jobs:
         # See https://github.com/actions/checkout/commits
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
-      - name: Set up JDK 17
+      - name: Set up JDK 16
         # See https://github.com/actions/setup-java/commits
         uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
         with:
-          java-version: 17
+          java-version: 16
           distribution: temurin
 
-      - name: Deploy with Gradle
-        run: ./gradlew deploy
+      - name: Publish to Maven Repository
+        if: ${{ success() && github.repository == 'GeyserMC/MCProtocolLib' && github.ref_name == 'master' }}
+        uses: gradle/gradle-build-action@3bfe3a46584a206fb8361cdedd0647b0c4204232
         env:
           OPENCOLLAB_USERNAME: ${{ vars.DEPLOY_USER }}
           OPENCOLLAB_PASSWORD: ${{ secrets.DEPLOY_PASS }}
+        with:
+          arguments: publish
